--- a/src/page/pond/pond-info/index.scss
+++ b/src/page/pond/pond-info/index.scss
@@ -25,7 +25,8 @@
     }
   
     .pond-info,
-    .water-report {
+    .water-report,
+    .pond-waterreport { 
       background-color: #fff;
       padding: 20px;
       margin-bottom: 20px;
@@ -63,4 +64,3 @@
       }
     }
   }
-  
