--- a/src/page/pond/manager-pond/index.scss
+++ b/src/page/pond/manager-pond/index.scss
@@ -1,12 +1,22 @@
 .ManagerPond-container {
-    background-image: url('../../assets/LoginBg.png');
+    background-image: url('../../../assets/LoginBg.png');
     background-size: cover;
     background-attachment: fixed;
     min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .pond-card-container{
+    border-radius: 25px;
     padding: 40px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    max-width: 1200px;
+    margin: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: rgba(255, 255, 255, 0.9); //Semi-transparent bg
   
     h1 {
       font-family: 'Oswald', sans-serif;
@@ -39,14 +49,14 @@
         transition: color 0.3s ease;
   
         &:hover {
-          color: #40a9ff;
+          color: #77a8d1;
         }
       }
     }
   
     .pond-dashboard {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-template-columns: repeat(3, 1fr); // Set 4 columns
       gap: 20px;
       width: 100%;
       max-width: 1200px;
@@ -57,5 +67,6 @@
       font-size: 18px;
       color: #666;
     }
+  }
   }
   
