--- a/src/page/plan/index.scss
+++ b/src/page/plan/index.scss
@@ -49,6 +49,14 @@
           margin-bottom: 10px;
         }
       }
+
+      .price {
+        font-size: 24px;
+        font-weight: bold;
+        color: #000000;
+        margin-bottom: 10px;
+      }
     }
   }
 }
+
