--- a/src/component/koi-card/index.scss
+++ b/src/component/koi-card/index.scss
@@ -7,9 +7,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between; /* Ensure left and right alignment */
-    max-width: 1000px;
+    width: 450px;
     min-height: 220px;
     gap: 20px;
+    
     
     &:hover {
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); // Add hover effect to the card
