--- a/src/component/pond-card/index.scss
+++ b/src/component/pond-card/index.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between; /* Ensure left and right alignment */
-  max-width: 1000px;
+  width: 500px;
   min-height: 220px;
   gap: 20px;
 
