--- a/src/page/koifish/manager-koi/index.scss
+++ b/src/page/koifish/manager-koi/index.scss
@@ -6,11 +6,12 @@ min-height: 100vh;
 display: flex;
 justify-content: center;
 align-items: center;
+
 .ManagerKoi-container {
   border-radius: 25px;
   padding: 40px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  max-width: 1000px;
+  width: 1000px;
   margin: 50px;
   display: flex;
   flex-direction: column;
@@ -61,8 +62,8 @@ align-items: center;
     display: grid; // Use grid for layout
     grid-template-columns: repeat(2, 1fr); // Responsive columns
     gap: 20px; // Space between cards
-    justify-items: center; // Center cards horizontally
-    align-items: start; // Align cards to the start vertically
+    justify-items:auto; // Center cards horizontally
+    align-items: stretch; // Align cards to the start vertically
   }
 }
 }
