--- a/src/page/pond/manager-pond/index.scss
+++ b/src/page/pond/manager-pond/index.scss
@@ -14,6 +14,7 @@
     max-width: 1200px;
     margin: 20px;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.9); //Semi-transparent bg
@@ -56,7 +57,7 @@
   
     .pond-dashboard {
       display: grid;
-        grid-template-columns: repeat(3, 1fr); // Set 4 columns
+        grid-template-columns: repeat(2, 1fr); // Set 4 columns
       gap: 20px;
       width: 100%;
       max-width: 1200px;
