tweaked footer, formated koi info

--- a/src/component/footer/index.scss
+++ b/src/component/footer/index.scss
@@ -2,6 +2,7 @@
   background-color: #1a1a1a; // Dark background similar to KoiControl
   color: #fff;
   padding: 40px 20px; // Added top/bottom padding for better spacing
+  height: 30vh;
   
   .footer-content {
     margin-bottom: 20px;
