--- a/src/page/login/index.scss
+++ b/src/page/login/index.scss
@@ -21,17 +21,17 @@
 .login-form-container {
     margin-top: 0px;
     width: 50%;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.9);
     padding: 20px;
     border-radius: 20px;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.1);
 }
 
 .loginForm-title {
+    font-family: 'Oswald', sans-serif;
     font-size: 36px;
-    font-weight: bold;
-    color: #000000;
-    margin-bottom: 20px;
+    color: #1890ff;
+    margin-bottom: 30px;
     text-align: center;
 }
 
