--- a/src/page/calculate/calculateFood/index.scss
+++ b/src/page/calculate/calculateFood/index.scss
@@ -24,7 +24,13 @@
         margin-bottom: 30px;
         text-align: center;
       }
-  
+      h2 {
+        font-family: 'Oswald', sans-serif;
+        font-size: 36px;
+        color: #1890ff;
+        margin-bottom: 30px;
+        text-align: center;
+      }
       form {
         display: flex;
         flex-direction: column;
