--- a/src/component/pond-card/index.scss
+++ b/src/component/pond-card/index.scss
@@ -39,6 +39,7 @@
     font-size: 18px;
     font-weight: bold;
     margin-top: 10px;
+    margin-bottom: 20px;
     color: #333;
   }
 
@@ -50,6 +51,7 @@
     text-align: left;
 
     p {
+      
       font-size: 16px;
       color: #333;
       margin: 8px 0;
@@ -61,12 +63,10 @@
 
     .detail-button {
       align-items: center;
-      margin-top: 20px;
       align-self: center; 
       background-color: #1890ff;
       color: white;
-      border-radius: 4px;
-      padding: 8px 15px;
+      border-radius: 4px; 
       font-size: 14px;
       font-weight: bold;
       cursor: pointer;
