--- a/src/page/product-detail/index.scss
+++ b/src/page/product-detail/index.scss
@@ -1,25 +1,82 @@
 .product-detail {
+    text-align: center;
+    padding: 20px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    background-color: rgba(255, 255, 255, 0.9);
-    border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.product-image {
-    width: 100%;
-    max-width: 500px;
+    background-image: url('../../assets/LoginBg.png');
+    background-size: cover;
+    background-attachment: fixed;
     border-radius: 10px;
-    margin-bottom: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
+    justify-content: center;
+    align-items: center;
+    
 
-.product-description {
-    font-size: 16px;
-    color: #333;
-    text-align: center;
-    margin-bottom: 20px;
-    line-height: 1.5;
-}
+    .product-info{
+        background-color: rgba(255, 255, 255, 0.9);
+        padding: 40px;
+        border-radius: 25px;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+        max-width: 1200px;
+        width: 100%;
+    }
+    
+    // h1 {
+    //   font-size: 2.5rem;
+    //   color:  #2b98f8;
+    //   margin-bottom: 20px;
+    //   font-family: 'Oswald', sans-serif; // Font style for the title
+    // }
+  
+    .product-name {
+      font-size: 2rem;
+      font-weight: bold;
+      color: #3790e4;
+      margin-bottom: 10px;
+    }
+  
+    .product-image {
+      max-width: 40%;
+      height: auto;
+      border-radius: 8px;
+      margin-bottom: 15px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+  
+    .product-desc {
+      font-size: 1.2rem;
+      color: #6d6d6d;
+      margin-bottom: 10px;
+      line-height: 1.6;
+      text-align: inherit;
+
+      .desc-label {
+        font-weight: bold;
+        text-decoration: underline;
+        color: #3790e4;;
+      }
+    }
+  
+    .product-price {
+      font-size: 1.5rem;
+      color: #ffa600;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+  
+    .product-link {
+      font-size: 1.2rem;
+      color: #fff;
+      background-color: #007bff;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 6px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      transition: background-color 0.3s ease;
+  
+      &:hover {
+        background-color: #0056b3;
+      }
+    }
+  }
+  
