--- a/src/page/koifish/koi-info/index.scss
+++ b/src/page/koifish/koi-info/index.scss
@@ -132,11 +132,12 @@
 
     .koi-report-latest{
       font-size: 13px;
-      background-color: #cecece;
+      background-color: #e4e4e4;
       border-radius: 8px;
       padding: 3px;
       text-wrap: wrap;
-      height: 250px;
+      margin-left:10px;
+      height: 170px;
     }
 
     .koi-form{
