--- a/src/page/recommendation/index.scss
+++ b/src/page/recommendation/index.scss
@@ -1,89 +1,120 @@
 .recommend-page {
-    background-image: url('../../assets/LoginBg.png');
-    background-size: cover;
-    background-attachment: fixed;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  
-    .shop-container {
-      background-color: rgba(255, 255, 255, 0.9); // Semi-transparent background
-      padding: 40px;
-      border-radius: 25px;
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-      max-width: 1200px;
-      width: 100%;
+  background-image: url('../../assets/LoginBg.png');
+  background-size: cover;
+  background-attachment: fixed;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  .shop-container {
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 40px;
+    border-radius: 25px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    max-width: 1200px;
+    width: 100%;
+  }
+
+  .shop-title {
+    font-family: 'Oswald', sans-serif;
+    font-size: 36px;
+    color: #1890ff;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+
+  .search-product {
+    width: 70%;
+    padding: 10px 15px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    outline: none;
+    transition: border-color 0.3s ease;
+
+    &:focus {
+      border-color: #1890ff;
     }
-  
-    .shop-title {
-      font-family: 'Oswald', sans-serif;
-      font-size: 36px;
-      color: #1890ff;
-      text-align: center;
-      margin-bottom: 50px;
+  }
+
+  .select-product-type {
+    width: 20%;
+    margin-bottom: 20px;
+
+    .ant-select-selector {
       
+      font-size: 16px;
+      border-radius: 8px;
+      margin: 10px;
+      border: 1px solid #ccc;
+      transition: border-color 0.3s ease;
+
+      &:hover, &:focus {
+        border-color: #1890ff;
+      }
     }
-  
-    .card-container {
-      width: 100%;
-      display: grid;
-      grid-template-columns: repeat(4, 1fr); // Set 4 columns
-      gap: 20px; // Space between cards
-      max-width: 1200px;
-      margin-top: 20px; // Add margin to separate from title if needed
-  
-      .product-card {
-        list-style: none;
-        padding: 0;
-  
-        li {
-          background-color: #ffffff;
-          border-radius: 10px;
-          padding: 15px;
-          text-align: center;
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      
-          .product-name {
-            font-weight: bold;  // Make the product name bold
-            color: #333;
-            margin-bottom: 10px;
-          }
-  
-          .product-img {
-            margin-bottom: 10px;
-            border-radius: 5px;
-          }
-  
-          .product-price {
-            color: #ff5722;
-            font-size: 16px;
-            margin-bottom: 10px;
-          }
-  
-          .product-desc {
-            font-size: 14px;
-            color: #666;
-            margin-bottom: 15px;
-          }
-  
-          .product-link {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 5px;
-            text-decoration: none;
-            display: inline-block;
-            margin-top: 10px;
-            font-weight: bold;
-  
-            &:hover {
-              background-color: #45a049;
-            }
+  }
+
+  .card-container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    max-width: 1200px;
+    margin-top: 20px;
+
+    .product-card {
+      list-style: none;
+      padding: 0;
+
+      li {
+        background-color: #ffffff;
+        border-radius: 10px;
+        padding: 15px;
+        text-align: center;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+        .product-name {
+          font-weight: bold;
+          color: #333;
+          margin-bottom: 10px;
+        }
+
+        .product-img {
+          margin-bottom: 10px;
+          border-radius: 5px;
+        }
+
+        .product-price {
+          color: #ff5722;
+          font-size: 16px;
+          margin-bottom: 10px;
+        }
+
+        .product-desc {
+          font-size: 14px;
+          color: #666;
+          margin-bottom: 15px;
+        }
+
+        .product-link {
+          background-color: #4CAF50;
+          color: white;
+          padding: 10px 20px;
+          border-radius: 5px;
+          text-decoration: none;
+          display: inline-block;
+          margin-top: 10px;
+          font-weight: bold;
+
+          &:hover {
+            background-color: #45a049;
           }
         }
       }
     }
   }
-  
+}
