--- a/src/page/calculate/calculateSalt/index.scss
+++ b/src/page/calculate/calculateSalt/index.scss
@@ -38,6 +38,8 @@
     .ant-form {
         margin-bottom: 20px;
         width: 100%;
+        align-items: center;
+        margin-left: 50px;
   
       .ant-form-item {
         margin-bottom: 20px;
@@ -47,7 +49,7 @@
           color: #333;
         }
   
-        .ant-select, .ant-input-number, .ant-slider {
+        .ant-input-number, .ant-slider {
           width: 100%;
         }
   
@@ -58,6 +60,7 @@
         }
   
         .ant-slider {
+          width: 200px;
           margin-right: 16px;
         }
       }
@@ -67,6 +70,7 @@
         border-color: #4CAF50;
         border-radius: 5px;
         font-weight: bold;
+        text-transform: uppercase;
         padding: 10px 20px;
         transition: background-color 0.3s ease;
   
@@ -92,3 +96,11 @@
     }
   }
   
+  .ant-row{
+    display: flex;
+    flex-direction: row;
+  }
+
+  .ant-select{
+    width: 100%;
+  }
