--- a/src/page/home/index.scss
+++ b/src/page/home/index.scss
@@ -138,9 +138,7 @@
   font-size: 3rem;
 }
 
-.home-container-1,
-.home-container-2,
-.home-container-3 {
+.home-container-sub {
   padding: 20px;
   text-align: left;
 
