--- a/src/component/header/index.scss
+++ b/src/component/header/index.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
+
 .header {
     background-color: rgb(227, 56, 13);
     display: flex;
@@ -18,7 +21,8 @@
             color: white;
             font-size: 30px;
             font-weight: bold;
-            font-family: 'Book Man Old Styles';
+            font-family: 'Lobster', cursive;
+
         }
     }
 
