--- a/src/page/recommendation/index.scss
+++ b/src/page/recommendation/index.scss
@@ -15,67 +15,76 @@
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     max-width: 1200px;
     width: 100%;
-  }
+    align-items: center;
+    justify-items: center;
 
-  .shop-title {
-    font-family: 'Oswald', sans-serif;
-    font-size: 36px;
-    color: #1890ff;
-    text-align: center;
-    margin-bottom: 50px;
-  }
-
-  .search-product {
-    width: 70%;
-    padding: 10px 15px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    margin-bottom: 20px;
-    outline: none;
-    transition: border-color 0.3s ease;
-
-    &:focus {
-      border-color: #1890ff;
+    .shop-title {
+      font-family: 'Oswald', sans-serif;
+      font-size: 36px;
+      color: #1890ff;
+      text-align: center;
+      margin-bottom: 50px;
     }
-  }
 
-  .select-product-type {
-    width: 20%;
-    margin-bottom: 20px;
+    .search-bar-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 30px;
+      width: 50%;
 
-    .ant-select-selector {
-      
-      font-size: 16px;
-      border-radius: 8px;
-      margin: 10px;
-      border: 1px solid #ccc;
-      transition: border-color 0.3s ease;
+      .search-product {
+        flex: 2;
+        padding: 12px 16px;
+        font-size: 16px;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        width: 300px;
+        outline: none;
+        transition: border-color 0.3s ease;
+        margin-right: 15px;
 
-      &:hover, &:focus {
-        border-color: #1890ff;
+        &:focus {
+          border-color: #1890ff;
+          box-shadow: 0 0 5px rgba(24, 144, 255, 0.5);
+        }
+      }
+
+      .select-product-type {
+        flex: 1;
+        .ant-select-selector {
+          padding: 10px;
+          font-size: 16px;
+          border-radius: 8px;
+          border: 1px solid #ccc;
+          transition: border-color 0.3s ease;
+
+          &:hover, &:focus {
+            border-color: #1890ff;
+            box-shadow: 0 0 5px rgba(24, 144, 255, 0.5);
+          }
+        }
       }
     }
-  }
 
-  .card-container {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
-    max-width: 1200px;
-    margin-top: 20px;
+    .card-container {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 20px;
+      width: 100%;
 
-    .product-card {
-      list-style: none;
-      padding: 0;
-
-      li {
+      .product-card {
         background-color: #ffffff;
         border-radius: 10px;
-        padding: 15px;
+        padding: 20px;
         text-align: center;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        transition: transform 0.2s;
+
+        &:hover {
+          transform: translateY(-5px);
+          box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+        }
 
         .product-name {
           font-weight: bold;
